--- a/test/dispatcher_test.html
+++ b/test/dispatcher_test.html
@@ -10,9 +10,8 @@
 	<script src="jquery.js" type="text/javascript"></script>
 	<script src="../dispatcher.js" type="text/javascript"></script>
 
-	<meta name="page" content="tests#index"/>
 </head>
-<body>
+<body data-page="tests#index">
 
 <div id="content">
 
